--- a/WPF.QuickStart.UI/Views/Twitter/TwitterView.xaml
+++ b/WPF.QuickStart.UI/Views/Twitter/TwitterView.xaml
@@ -30,7 +30,6 @@
             <TextBlock Text="{Binding DisplayName}" Style="{StaticResource HeaderStyle}"/>
         </StackPanel>
 
-
         <Grid Width="Auto" Height="Auto" Grid.Column="0" Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -59,7 +58,7 @@
                     x:Name="CountCombo" 
                     ItemsSource="{Binding CountElements}" 
                     IsSynchronizedWithCurrentItem="True"
-                    cal:Message.Attach="[Event SelectionChanged] = [Action OnCountSelectionChanged($this,$eventArgs)]" Width="58">
+                    cal:Message.Attach="[Event SelectionChanged] = [Action OnCountSelectionChanged($this,$eventArgs)]" Width="80">
                     </ComboBox>
                 </StackPanel>
 
@@ -80,9 +79,6 @@
 
         </Grid>
 
-
-
-
         <!--<DataGrid 
             Grid.Column="0" Grid.Row="1"
             AutoGenerateColumns="True"
@@ -94,26 +90,32 @@
             ScrollViewer.HorizontalScrollBarVisibility="Auto">
         </DataGrid>-->
 
-        <xcdg:DataGridControl 
-            x:Name="_dataGrid"
-            Grid.Column="0" Grid.Row="2"
-            MinHeight="400"
-            MinWidth="1000" 
-            Width="Auto"
-            Margin="0,10"
-            AutoCreateColumns="False"
-            ItemsSource="{Binding Tweets}">
+        <Grid Grid.Column="0" Grid.Row="2">
+        
+            <xcdg:DataGridControl 
+                x:Name="_dataGrid"            
+                MinHeight="400"
+                MinWidth="1000" 
+                Width="Auto"
+                Margin="0,10"
+                AutoCreateColumns="False"
+                IsEnabled="False"
+                ItemsSource="{Binding Tweets}">
 
-            <xcdg:DataGridControl.Columns>
-                <xcdg:Column Title="Date" FieldName="Date" VisiblePosition="0"/>
-                <xcdg:Column Title="ScreenName" FieldName="ScreenName" VisiblePosition="1"/>
-                <xcdg:Column Title="Status" FieldName="Text" VisiblePosition="2" MinWidth="400" />
-            </xcdg:DataGridControl.Columns>
-            <xcdg:DataGridControl.View>
-                <xcdg:TableView ColumnStretchMode="All" ColumnStretchMinWidth="100" />
-            </xcdg:DataGridControl.View>
+                <xcdg:DataGridControl.Columns>
+                    <xcdg:Column Title="Date" FieldName="Date" VisiblePosition="0"/>
+                    <xcdg:Column Title="ScreenName" FieldName="ScreenName" VisiblePosition="1"/>
+                    <xcdg:Column Title="Status" FieldName="Text" VisiblePosition="2" MinWidth="400" />
+                </xcdg:DataGridControl.Columns>
+                <xcdg:DataGridControl.View>
+                    <xcdg:TableView ColumnStretchMode="All" ColumnStretchMinWidth="100" />
+                </xcdg:DataGridControl.View>
 
-        </xcdg:DataGridControl>
+            </xcdg:DataGridControl>
+
+            <xctk:BusyIndicator IsBusy="{Binding IsBusy}" />
+
+        </Grid>
 
     </Grid>
 
