--- a/WPF.QuickStart.UI/Views/Yahoo/HistoricalQuoteView.xaml
+++ b/WPF.QuickStart.UI/Views/Yahoo/HistoricalQuoteView.xaml
@@ -8,11 +8,12 @@
              xmlns:chart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
              HorizontalAlignment="Center">
 
-    <StackPanel Height="Auto">
+    <DockPanel>
 
-        <TextBlock Text="{Binding DisplayName}" Style="{StaticResource HeaderStyle}"/>
 
-        <StackPanel Orientation="Vertical">
+        <TextBlock Text="{Binding DisplayName}" Style="{StaticResource HeaderStyle}" DockPanel.Dock="Top" />
+
+        <StackPanel Orientation="Vertical" DockPanel.Dock="Top">
             <StackPanel Orientation="Horizontal">
                 <TextBlock x:Name="SecurityCodeTxt" Text="Security Code" />
                 <ctrl:TextBoxWatermarked x:Name="SecurityCode"  Width="134" ToolTip="Input code. Exple : YHOO, MSCI .." Watermark="YHOO" />
@@ -26,7 +27,7 @@
             <Button x:Name="LoadHistoricalData" Content="Load historical quotes" />
         </StackPanel>
 
-        <Grid Margin="0,10">
+        <Grid Margin="0,10" DockPanel.Dock="Top">
 
             <xcdg:DataGridControl 
                 x:Name="_dataGrid" 
@@ -36,10 +37,12 @@
                 Width="Auto"
                 ItemsSource="{Binding MyCollectionItems}"/>
         </Grid>
-        
-        <StackPanel Orientation="Horizontal">
 
-            <chart:PieChart
+
+        <DockPanel>
+
+            <chart:PieChart 
+                DockPanel.Dock="Left"
                 Style="{StaticResource MinimalChartStyle}"
                 ChartTitle="Minimal Pie Chart"
                 ChartSubTitle="Chart with fixed width and height"
@@ -53,18 +56,10 @@
                 </chart:PieChart.Series>
             </chart:PieChart>
 
-            <StackPanel>
-            
-                <Grid Margin="20,0" Background="AliceBlue" Width="500" Height="200">
-                    <oxy:PlotView Title="Chart">
-                        <oxy:PlotView.Series>
-                            <oxy:LineSeries ItemsSource="{Binding ChartQuotePointsList}"/>
-                        </oxy:PlotView.Series>
-                    </oxy:PlotView>
-                </Grid>
+            <DockPanel DockPanel.Dock="Right" Background="CadetBlue">
 
-                <GroupBox Name="grpbx_pagerange" Header="Axis Y" Margin="20,5">
-                    <StackPanel Orientation="Horizontal">                    
+                <GroupBox Name="PriceTypeOptionsGrp" Header="Axis Y" Margin="20,5" DockPanel.Dock="Bottom">
+                    <StackPanel Orientation="Horizontal">
                         <!--<RadioButton x:Name="radbtn_Open" Content="Open"  GroupName="chartYtype"  />
                         <RadioButton Name="radbtn_Close" Content="Close"   GroupName="chartYtype" />-->
 
@@ -75,15 +70,23 @@
                         <RadioButton Content="High" IsChecked="{Binding PriceTypeOptions, Converter={
                             StaticResource enumToBoolConverter}, ConverterParameter=High}" Margin="10,0" />
                         <RadioButton Content="Low" IsChecked="{Binding PriceTypeOptions, Converter={
-                            StaticResource enumToBoolConverter}, ConverterParameter=Low}" Margin="10,0" />                        
+                            StaticResource enumToBoolConverter}, ConverterParameter=Low}" Margin="10,0" />
 
                     </StackPanel>
                 </GroupBox>
 
-            </StackPanel>
+                <Grid Margin="20,0">
+                    <oxy:PlotView Title="Chart" Width="500" Height="250">
+                        <oxy:PlotView.Series>
+                            <oxy:LineSeries ItemsSource="{Binding ChartQuotePointsList}"/>
+                        </oxy:PlotView.Series>
+                    </oxy:PlotView>
+                </Grid>
 
-        </StackPanel>
+            </DockPanel>
 
-    </StackPanel>
+        </DockPanel>
+
+    </DockPanel>
 
 </UserControl>    
